# groupwise-stratified-kfold

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml
.github/workflows/: main.yaml  pypi.yaml  testpypi.yaml
groupwise_stratified_kfold/: __init__.py  kfold.py
tests/: test_groupwise_stratified_kfold.py  test_kfold.py
