[tool.poetry]
name = "groupwise-stratified-kfold"
version = "0.1.0"
description = ""
authors = ["Andreas Peldszus <andreas.peldszus@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
mypy = "^0.931"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
isort = "^5.10.1"

[tool.black]
line-length = 79
quiet = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
