[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "groupwise-stratified-kfold"
version = "0.1.0-alpha1"
description = ""
readme = "README.md"
authors = ["Andreas Peldszus <andreas.peldszus@posteo.de>"]
license = "MIT"
repository = "https://github.com/peldszus/groupwise-stratified-kfold"
homepage = "https://github.com/peldszus/groupwise-stratified-kfold"
# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest = "^6.2"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 79
quiet = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
pretty = true
## Enable this later.
# show_traceback = true
# color_output = true
# allow_redefinition = false
# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# ignore_missing_imports = true
# implicit_reexport = false
# no_implicit_optional = true
# show_column_numbers = true
# show_error_codes = true
# show_error_context = true
# strict_equality = true
# strict_optional = true
# warn_no_return = true
# warn_redundant_casts = true
# warn_return_any = true
# warn_unreachable = true
# warn_unused_configs = true
# warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-ra -v --color=yes --code-highlight=yes --cov groupwise_stratified_kfold --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]
